Refactoring EventTypeAnnotationsValidator: grunt work to support other annotations