@@ -1,18 +1,24 @@
 package org.zalando.nakadi.service.validation;
 
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
-
 import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
+import java.util.function.Function;
+import java.util.stream.Stream;
+
+import org.assertj.core.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import org.zalando.nakadi.domain.Feature;
 import org.zalando.nakadi.exceptions.runtime.InvalidEventTypeException;
 import org.zalando.nakadi.plugin.api.authz.AuthorizationService;
 import org.zalando.nakadi.service.FeatureToggleService;
 
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -23,7 +29,7 @@ public class EventTypeAnnotationsValidatorTest {
     private AuthorizationService authorizationService;
     private EventTypeAnnotationsValidator validator;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         featureToggleService = mock(FeatureToggleService.class);
         authorizationService = mock(AuthorizationService.class);
@@ -31,100 +37,93 @@ public class EventTypeAnnotationsValidatorTest {
             featureToggleService, authorizationService, Collections.singletonList(A_TEST_APPLICATION));
     }
 
-    @Test
-    public void whenMaterializationEventFormatIsWrongThenFail() {
-        final var annotations = Map.of(
-                EventTypeAnnotationsValidator.MATERIALIZE_EVENTS_ANNOTATION, "1 day"
+    @ParameterizedTest
+    @MethodSource("getValidDataLakeAnnotations")
+    public void testValidDataLakeAnnotations(final Map<String, String> annotations) {
+        validator.validateDataLakeAnnotations(annotations);
+    }
+
+    public static Stream<Map<String, String>> getValidDataLakeAnnotations() {
+        return Stream.of(
+                Stream.of("off", "on")
+                        .map(materialization -> Map.of(
+                                EventTypeAnnotationsValidator.DATA_LAKE_MATERIALIZE_EVENTS_ANNOTATION, materialization,
+                                EventTypeAnnotationsValidator.DATA_LAKE_RETENTION_PERIOD_ANNOTATION, "1m",
+                                EventTypeAnnotationsValidator.DATA_LAKE_RETENTION_REASON_ANNOTATION, "for testing"
+                        )),
+                Stream.of(
+                        "unlimited",
+                        "12 days",
+                        "3650 days",
+                        "120 months",
+                        "1 month",
+                        "10 years",
+                        "25d",
+                        "1m",
+                        "2y",
+                        "1 year"
+                )
+                        .map(retentionPeriod -> Map.of(
+                                EventTypeAnnotationsValidator.DATA_LAKE_RETENTION_PERIOD_ANNOTATION, retentionPeriod,
+                                EventTypeAnnotationsValidator.DATA_LAKE_RETENTION_REASON_ANNOTATION, "I need my data"
+                        )),
+                Stream.of(
+                        Map.of("some-annotation", "some-value")
+                )
+        ).flatMap(Function.identity());
+    }
+
+    @ParameterizedTest
+    @MethodSource("getInvalidDataLakeAnnotations")
+    public void testInvalidDataLakeAnnotations(final Map<String, String> annotations, final String[] errorMessages) {
+        final var exception = assertThrows(
+                InvalidEventTypeException.class,
+                () -> validator.validateDataLakeAnnotations(annotations));
+        Assertions.assertThat(exception.getMessage()).contains(errorMessages);
+    }
+
+    public static Stream<Arguments> getInvalidDataLakeAnnotations() {
+        return Stream.of(
+                Arguments.of(
+                        // Invalid materialization value
+                        Map.of(
+                                EventTypeAnnotationsValidator.DATA_LAKE_MATERIALIZE_EVENTS_ANNOTATION, "true"
+                        ),
+                        new String[] {
+                                EventTypeAnnotationsValidator.DATA_LAKE_MATERIALIZE_EVENTS_ANNOTATION,
+                        }
+                ),
+                Arguments.of(
+                        // Materialization is on without retention period
+                        Map.of(
+                                EventTypeAnnotationsValidator.DATA_LAKE_MATERIALIZE_EVENTS_ANNOTATION, "on"
+                        ),
+                        new String[] {
+                                EventTypeAnnotationsValidator.DATA_LAKE_RETENTION_PERIOD_ANNOTATION,
+                        }
+                ),
+                Arguments.of(
+                        // Retention period without retention reason
+                        Map.of(
+                                EventTypeAnnotationsValidator.DATA_LAKE_RETENTION_PERIOD_ANNOTATION, "1 day"
+                        ),
+                        new String[] {
+                                EventTypeAnnotationsValidator.DATA_LAKE_RETENTION_REASON_ANNOTATION,
+                                EventTypeAnnotationsValidator.DATA_LAKE_RETENTION_PERIOD_ANNOTATION,
+                        }
+                ),
+                Arguments.of(
+                        // Wrong retention period value
+                        Map.of(
+                                EventTypeAnnotationsValidator.DATA_LAKE_RETENTION_PERIOD_ANNOTATION, "1 airplane",
+                                EventTypeAnnotationsValidator.DATA_LAKE_RETENTION_REASON_ANNOTATION, "I need my data"
+                        ),
+                        new String[] {
+                                EventTypeAnnotationsValidator.DATA_LAKE_RETENTION_PERIOD_ANNOTATION,
+                                "https://docs.google.com/document/d/1-SwwpwUqauc_pXu-743YA1gO8l5_R_Gf4nbYml1ySiI",
+                        }
+                )
         );
-        try {
-            validator.validateAnnotations(annotations);
-            Assert.fail("not reachable");
-        } catch (InvalidEventTypeException e) {
-            Assert.assertTrue(
-                "When the format of the Materialize Event annotation is wrong, the name of the annotation " +
-                "should be present",
-                e.getMessage().contains(EventTypeAnnotationsValidator.MATERIALIZE_EVENTS_ANNOTATION));
-        }
-    }
-
-    @Test
-    public void whenRetentionPeriodThenRetentionReasonRequired() {
-        final var annotations = Map.of(
-                EventTypeAnnotationsValidator.RETENTION_PERIOD_ANNOTATION, "1 day"
-        );
-        try {
-            validator.validateAnnotations(annotations);
-            Assert.fail("not reachable");
-        } catch (InvalidEventTypeException e) {
-            Assert.assertTrue(
-                "When the retention period is specified but the retention reason is not," +
-                " the error message should include the retention reason annotation name",
-                e.getMessage().contains(EventTypeAnnotationsValidator.RETENTION_REASON_ANNOTATION));
-            Assert.assertTrue(
-                "When the retention period is specified but the retention reason is not," +
-                " the error message should include the retention period annotation name",
-                e.getMessage().contains(EventTypeAnnotationsValidator.RETENTION_PERIOD_ANNOTATION));
-        }
-    }
-
-    @Test
-    public void whenRetentionPeriodFormatIsWrongThenFail() {
-        final var annotations = Map.of(
-                EventTypeAnnotationsValidator.RETENTION_PERIOD_ANNOTATION, "1 airplane",
-                EventTypeAnnotationsValidator.RETENTION_REASON_ANNOTATION, "I need my data"
-        );
-        try {
-            validator.validateAnnotations(annotations);
-            Assert.fail("not reachable");
-        } catch (InvalidEventTypeException e) {
-            Assert.assertTrue(
-                "When retention period format is wrong, the message should contain a the annotation name",
-                e.getMessage().contains(EventTypeAnnotationsValidator.RETENTION_PERIOD_ANNOTATION));
-            Assert.assertTrue(
-                "When retention period format is wrong, the message should contain a link to the documentation",
-                e.getMessage().contains(
-                        "https://docs.google.com/document/d/1-SwwpwUqauc_pXu-743YA1gO8l5_R_Gf4nbYml1ySiI"));
-        }
-    }
-
-    @Test
-    public void whenRetentionPeriodAndReasonThenOk() {
-        final String[] validRetentionPeriodValues = {
-                "unlimited",
-                "12 days",
-                "3650 days",
-                "120 months",
-                "1 month",
-                "10 years",
-                "25d",
-                "1m",
-                "2y",
-                "1 year"
-        };
-
-        for (final String validRetentionPeriod : validRetentionPeriodValues) {
-            final var annotations = Map.of(
-                    EventTypeAnnotationsValidator.RETENTION_PERIOD_ANNOTATION, validRetentionPeriod,
-                    EventTypeAnnotationsValidator.RETENTION_REASON_ANNOTATION, "I need my data"
-            );
-
-            validator.validateAnnotations(annotations);
-        }
-    }
-
-    @Test
-    public void whenMaterializationEventsThenOk() {
-        final String[] validMaterializationEventsValues = {"off", "on"};
-
-        for (final var materializationEventValue : validMaterializationEventsValues) {
-            final var annotations = Map.of(
-                    EventTypeAnnotationsValidator.MATERIALIZE_EVENTS_ANNOTATION, materializationEventValue,
-                    EventTypeAnnotationsValidator.RETENTION_PERIOD_ANNOTATION, "1m",
-                    EventTypeAnnotationsValidator.RETENTION_REASON_ANNOTATION, "for testing"
-            );
-
-            validator.validateAnnotations(annotations);
-        }
     }
 
     @Test
@@ -132,35 +131,10 @@ public class EventTypeAnnotationsValidatorTest {
         when(featureToggleService.isFeatureEnabled(Feature.FORCE_DATA_LAKE_ANNOTATIONS)).thenReturn(true);
         when(authorizationService.getSubject()).thenReturn(Optional.of(() -> A_TEST_APPLICATION));
 
-        try {
-            validator.validateAnnotations(Collections.emptyMap());
-            Assert.fail("not reachable");
-        } catch (InvalidEventTypeException e) {
-            Assert.assertTrue(
-                    e.getMessage().contains(EventTypeAnnotationsValidator.MATERIALIZE_EVENTS_ANNOTATION));
-        }
-    }
-
-    @Test
-    public void whenMaterializationIsOnThenRetentionPeriodIsRequired() {
-        try {
-            validator.validateAnnotations(Collections.singletonMap(
-                    EventTypeAnnotationsValidator.MATERIALIZE_EVENTS_ANNOTATION, "on"));
-            Assert.fail("not reachable");
-        } catch (InvalidEventTypeException e) {
-            Assert.assertTrue(
-                    e.getMessage().contains(EventTypeAnnotationsValidator.RETENTION_PERIOD_ANNOTATION));
-        }
-    }
-
-    @Test
-    public void itWorksWithOtherAnnotations() {
-        final var annotations = Map.of("some-annotation", "some-value");
-        validator.validateAnnotations(annotations);
-    }
-
-    @Test
-    public void itWorksWithoutAnnotations() {
-        validator.validateAnnotations(null);
+        final var exception = assertThrows(
+                InvalidEventTypeException.class,
+                () -> validator.validateDataLakeAnnotations(Collections.emptyMap()));
+        Assertions.assertThat(exception.getMessage())
+                .contains(EventTypeAnnotationsValidator.DATA_LAKE_MATERIALIZE_EVENTS_ANNOTATION);
     }
 }
